Project budget_bot_currency_model {
  database_type: "PostgreSQL"
  Note: "Currency-aware data model with user-level base currency, category groups, operation journal, and FX lots."
}

Table currencies {
  code char(3) [pk, not null]
  name text [not null]
  scale smallint [not null, default: 2]
}

Table users {
  id bigint [pk, not null]
  base_currency_code char(3) [not null, ref: > currencies.code]
  username text
  created_at timestamptz [not null, default: `now()`]
}

Table categories {
  id bigint [pk, not null, increment]
  user_id bigint [not null, ref: > users.id]
  name text [not null]
  kind text [not null, note: "regular | group | income"]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, name) [unique, name: "uq_categories_user_name"]
  }
}

Table group_members {
  group_id bigint [not null, ref: > categories.id]
  child_category_id bigint [not null, ref: > categories.id]
  share numeric(7,6) [not null, note: "0 < share <= 1"]

  indexes {
    (group_id, child_category_id) [pk]
  }
}

Table operations {
  id bigint [pk, not null, increment]
  user_id bigint [not null, ref: > users.id]
  type text [not null, note: "income | group_income | exchange | expense | transfer"]
  comment text
  created_at timestamptz [not null, default: `now()`]
}

Table operation_entries {
  id bigint [pk, not null, increment]
  operation_id bigint [not null, ref: > operations.id]
  category_id bigint [not null, ref: > categories.id]
  currency_code char(3) [not null, ref: > currencies.code]
  amount numeric(20,8) [not null, note: "Signed delta in category currency balance"]
}

Table fx_lots {
  id bigint [pk, not null, increment]
  category_id bigint [not null, ref: > categories.id]
  currency_code char(3) [not null, ref: > currencies.code]
  amount_initial numeric(20,8) [not null]
  amount_remaining numeric(20,8) [not null]
  buy_rate_in_base numeric(20,8) [not null, note: "How much base currency for 1 unit of lot currency"]
  cost_base_initial numeric(20,2) [not null]
  cost_base_remaining numeric(20,2) [not null]
  opened_by_operation_id bigint [not null, ref: > operations.id]
  created_at timestamptz [not null, default: `now()`]
}

Table lot_consumptions {
  id bigint [pk, not null, increment]
  operation_id bigint [not null, ref: > operations.id]
  lot_id bigint [not null, ref: > fx_lots.id]
  amount numeric(20,8) [not null]
  cost_base numeric(20,2) [not null]
}

Table fx_rate_snapshots {
  id bigint [pk, not null, increment]
  base_currency_code char(3) [not null, ref: > currencies.code]
  quote_currency_code char(3) [not null, ref: > currencies.code]
  rate numeric(20,8) [not null]
  fetched_at timestamptz [not null]
  source text

  indexes {
    (base_currency_code, quote_currency_code, fetched_at) [unique, name: "uq_fx_rate_snapshots_pair_time"]
  }
}
